Closed Bug 1667267 Opened 5 years ago Closed 5 years ago

Scaling problem with Flash content and native Macbook display on Firefox 81.0

Categories

(Core Graveyard :: Plug-ins, defect, P1)

Firefox 81
Desktop
macOS

Tracking

(relnote-firefox 81+, firefox-esr78 unaffected, firefox81+ verified, firefox82+ verified, firefox83+ verified)

VERIFIED FIXED
83 Branch
Tracking Status
relnote-firefox --- 81+
firefox-esr78 --- unaffected
firefox81 + verified
firefox82 + verified
firefox83 + verified

People

(Reporter: jeclark, Assigned: mattwoodrow)

References

(Regression)

Details

(Keywords: regression)

Attachments

(5 files)

I attempted to bisect this with mozregression, but I can't identify a corresponding change. This only appears to happen with the generally available release version of Firefox 81.0. It does not happen on Firefox 82 or nightly. I'm mostly concerned that this was a late breaking change that might get merged into another branch in the future.

To Reproduce:
Using the native retina display on a relatively recent Macbook
In my case, macOS 10.15.6 with Firefox 81.0 and Flash Player 32.0.0.433 with a 2019 16" Macbook Pro.
Launch Firefox 81.0 (64-bit)
Go to: http://www.homestarrunner.com/
Allow Flash to run

Actual:
Flash content is scaled way up to the point that it's unusable (see screenshot)

Expected:
Flash content rendered at the correct scale

we're also getting this problem reported on support.mozilla.org a couple of times:
https://support.mozilla.org/en-US/questions/firefox?tagged=bug1667267&show=all&owner=all

Flags: needinfo?(jmathies)
Flags: needinfo?(davidp99)
Severity: -- → S2
Component: Untriaged → Plug-ins
Priority: -- → P1
Product: Firefox → Core

@cpeterson - Per our discussion, I attempted to regress for the fix build, but I never actually see the bug reproduce in the range between 81 and 82, presumably because I'm getting Nightly builds and not the ones from the generally available branch. Is there a flag/setting that I'm missing that would get me builds from the correct branch? I attached logs from that attempt. Hopefully it's at least useful for an exclusionary range. :D

Is there a flag/setting that I'm missing that would get me builds from the correct branch? I attached logs from that attempt. Hopefully it's at least useful for an exclusionary range. :D

You can tell mozregression to download builds from the Beta or Release channels using the flag --repo mozilla-beta or --repo mozilla-release. But bisecting the Release channel is typically not helpful because there are so few commits and builds.

btw, I recommend the mozregression GUI app. It's easier to configure and run.

https://mozilla.github.io/mozregression/install.html

I can reproduce this bug with Flash Player 32.0.0.433 in Firefox 81.0 on macOS 10.15.6. I had a hunch why we can reproduce this bug on the Release channel and not Nightly: WebRender is enabled on Nightly but not Beta or Release yet. This regression is in the non-WebRender graphics code. I will bisect Nightly with WebRender turned off.

[Tracking Requested - why for this release]:

Ryan and Matt, Firefox 81 breaks Flash rendering and is probably worth fixing in an 81.0.x dot release. I believe this is a regression from scaling bug 1653166. That bug has at least five other regressions.

I bisected this regression to your pushlog here, which includes scaling bug 1653166:

https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=4ed6ec0c8220321b13c108ffaa7ab6cfc8d7698f&tochange=4558b3cfd6fe49647780a0ec86dfa97f0dd3adcb

Flags: needinfo?(ryanvm)
Flags: needinfo?(matt.woodrow)
Regressed by: 1653166
Has Regression Range: --- → yes

Would be great if we understood why this doesn't reproduce on 82+. Or does it with WR disabled? Also, are we sure this only affects macOS?

Flags: needinfo?(ryanvm)
Flags: needinfo?(cpeterson)

(In reply to Ryan VanderMeulen [:RyanVM] from comment #8)

Would be great if we understood why this doesn't reproduce on 82+. Or does it with WR disabled? Also, are we sure this only affects macOS?

I can reproduce this bug on 82+ if I disable WR (with gfx.webrender.force-disabled pref = true). I tested both macOS and Windows without WebRender and the problem only affects macOS.

Flags: needinfo?(cpeterson)

Thanks, this is sounding more and more like a dot release driver.

We don't have access to our offices or labs. The only high density display I have access to at the moment is the native macbook display. I can't authoritatively rule out Windows based on our testing. We just happened to stumble across it.

Assignee: nobody → matt.woodrow
Status: NEW → ASSIGNED
Pushed by mwoodrow@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5853ab33adb8 Set MacIOSurfaceImage picture rect in device pixels. r=mstange
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch

Please also request Beta and Release approval on this patch ASAP.

Comment on attachment 9178136 [details]
Bug 1667267 - Set MacIOSurfaceImage picture rect in device pixels. r?mstange

Beta/Release Uplift Approval Request

  • User impact if declined: Incorrectly scaled flash content on HiDPI monitors on MacOS.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple fix to take the device scaling into account when computing plugin image bounds
  • String changes made/needed: None
Flags: needinfo?(matt.woodrow)
Attachment #9178136 - Flags: approval-mozilla-release?
Attachment #9178136 - Flags: approval-mozilla-beta?
Flags: needinfo?(jmathies)
Flags: needinfo?(davidp99)

Comment on attachment 9178136 [details]
Bug 1667267 - Set MacIOSurfaceImage picture rect in device pixels. r?mstange

regression fix, approved for 82.0b5

Attachment #9178136 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Comment on attachment 9178136 [details]
Bug 1667267 - Set MacIOSurfaceImage picture rect in device pixels. r?mstange

Approved for 81.0.1.

Attachment #9178136 - Flags: approval-mozilla-release? → approval-mozilla-release+

Added to the Firefox 81.0.1 relnotes:

Resolved incorrect scaling of Flash content on HiDPI macOS systems

QA Whiteboard: [qa-triaged]

Reproduced the issue on affected Release 81.0 on MacOS 10.15 MacBook Pro (13inch, 2017, 2560 x 1600).
Verified-fixed on all latest Firefox Nightly 83.0a1 (2020-09-30), Beta 85.0b5 and Release 80.0.1. on the same macOS device.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: