Bug 1667267 - Set MacIOSurfaceImage picture rect in device pixels. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D91541